Delete all repo and update all warnings