@@ -2,63 +2,20 @@ package nus.iss.se.team9.admin_service_team9.service;
 
 import java.io.FileWriter;
 import java.io.IOException;
-import java.io.Reader;
 import java.lang.reflect.Field;
-import java.nio.charset.Charset;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.List;
-
-import nus.iss.se.team9.admin_service_team9.repo.RecipeRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import com.opencsv.CSVReader;
 import com.opencsv.CSVWriter;
-import com.opencsv.exceptions.CsvException;
 
 @Service
 public class CsvService {
-    @Autowired
-    RecipeRepository recipeRepo;
-
-    public List<String[]> readCsv(Path filePath) throws IOException, CsvException {
-        List<String[]> list = new ArrayList<>();
-        try (Reader reader = Files.newBufferedReader(filePath)) {
-            try (CSVReader csvReader = new CSVReader(reader)) {
-                String[] line;
-                while ((line = csvReader.readNext()) != null) {
-                    list.add(line);
-                }
-            }
-        }
-        return list;
-    }
-
-    public List<String[]> readCsvWithDecoder(Path filePath, Charset charset) throws IOException, CsvException {
-        List<String[]> list = new ArrayList<>();
-        try (Reader reader = Files.newBufferedReader(filePath, charset)) {
-            try (CSVReader csvReader = new CSVReader(reader)) {
-                String[] line;
-                int i = 1;
-                while ((line = csvReader.readNext()) != null) {
-                    System.out.println(i);
-                    System.out.println(line);
-                    list.add(line);
-                    i++;
-                }
-            }
-        }
-        return list;
-    }
 
     public <T> void generateCsv(List<T> data, String csvName) throws IOException {
         String csvFileName = csvName + ".csv";
 
         try (CSVWriter writer = new CSVWriter(new FileWriter(csvFileName))) {
             if (!data.isEmpty()) {
-                T firstEntity = data.get(0);
+                T firstEntity = data.getFirst();
                 Field[] fields = firstEntity.getClass().getDeclaredFields();
 
                 // 创建头部行
@@ -77,7 +34,7 @@ public class CsvService {
                             Object value = fields[i].get(entity);
                             rowData[i] = (value != null) ? value.toString() : "";
                         } catch (IllegalAccessException e) {
-                            e.printStackTrace(); // 处理异常
+                            System.out.println(e.getMessage()); // 处理异常
                         }
                     }
                     writer.writeNext(rowData);
